# media_player

./: .gitignore  app.vue  latest_tracks.conf  nuxt.config.js  package.json  tailwind.config.js
assets/: tracks.json  visualizer.css
assets/animations/: loading.json
assets/css/: VueQuill.css  fonts.css  input.css  learnmore.scss  loading.css  main.css  page-transitions.css
assets/icons/: tailwind.js
components/: AddMusic.vue  AudioSlider.vue  AudioVisualizer.vue  LetterSelector.vue  SideNav.vue  Thumbnail.vue  TimeSlider.vue
layouts/: default.vue
middleware/: musicMiddleware.js
pages/: deneme.vue  index.vue  musics.vue  playlists.vue  videos.vue
pages/musics/: albums.vue  artists.vue  index.vue  pageTransitionMixin.js  pageTransitions.js  pages.js
pages/musics/artists/: [artist].vue  index.vue
pages/playlists/: index.vue
pages/videos/: folders.vue  index.vue  save.vue
plugins/: Vue3Lottie.client.js  axios.js  fontawesome.client.js  fontawesome.js  vuex.js
server/: cors.js  proxy.js
server/api/: audio_data.js  audio_deneme.js  audio_link.js  audio_link_2.js  deneme.js
server/middlewares/: cors.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: get_file_data.rs  main.rs
