[package]
name = "media_player_app"
version = "0.2.1"
description = "media player (it will be better than all)"
authors = ["xfxpositions", "kodsilici02"]
license = "MIT"
repository = "https://github.com/kodsilici02/media_player"
default-run = "media_player_app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = [] }
anyhow = "1.0.71"
chrono = { version = "0.4.24", features = ["serde"] }
bincode = "1.3.3"
flate2 = "1.0.26"
audiotags = "0.4.1"
id3 = "1.7.0"
base64 = "0.21.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
